fix(deploy): inject config script into index.html and finalize admin inbox fix

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
+    <!-- Load Config (Injected Secrets) -->
+    <script src="js/config.js"></script>
+
     <style>
       body {
         font-family: "Outfit", sans-serif;
