--- a/index.html
+++ b/index.html
@@ -836,19 +836,15 @@
 
           <!-- Form Side -->
           <div class="p-16 lg:w-7/12 bg-white flex flex-col justify-center">
-            <form
-              onsubmit="
-                event.preventDefault();
-                alert('Thank you! This is a demo form.');
             <form onsubmit="event.preventDefault(); submitForm(this, 'Quote');" class="space-y-4">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <input type="text" name="name" placeholder="Name" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition" required>
-                    <input type="email" name="email" placeholder="Email" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition" required>
+                    <input type="text" name="name" placeholder="Name" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition text-stone-700 font-light" required>
+                    <input type="email" name="email" placeholder="Email" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition text-stone-700 font-light" required>
                 </div>
-                <input type="tel" name="phone" placeholder="Phone" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition" required>
+                <input type="tel" name="phone" placeholder="Phone" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition text-stone-700 font-light" required>
                 <div class="relative">
-                  <select
-                  >
+                  <select name="service" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition appearance-none text-stone-700 font-light">
+                    <option value="" disabled selected>Select Service Needed</option>
                     <option>Refrigerator Repair</option>
                     <option>Washer Repair</option>
                     <option>Dryer Repair</option>
@@ -856,9 +852,7 @@
                     <option>Dishwasher Repair</option>
                     <option>Other</option>
                   </select>
-                  <div
-                    class="absolute right-6 top-1/2 transform -translate-y-1/2 text-stone-400 pointer-events-none"
-                  >
+                  <div class="absolute right-6 top-1/2 transform -translate-y-1/2 text-stone-400 pointer-events-none">
                     <i class="fa-solid fa-chevron-down"></i>
                   </div>
                 </div>
