--- a/admin.html
+++ b/admin.html
@@ -142,7 +142,7 @@
     <!-- Help Modal -->
     <div id="help-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden p-4 sm:p-0" onclick="if(event.target === this) this.classList.add('hidden')">
         <div class="bg-white p-6 rounded-lg shadow-xl max-w-2xl w-full relative max-h-[90vh] overflow-y-auto">
-            <button onclick="document.getElementById('help-modal').classList.add('hidden')" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 sticky z-10 bg-white rounded-full p-1">
+            <button onclick="document.getElementById('help-modal').classList.add('hidden')" class="float-right sticky top-4 text-gray-400 hover:text-gray-600 z-10 bg-white rounded-full p-1 shadow-sm border border-gray-100">
                 <i class="fa-solid fa-xmark fa-lg"></i>
             </button>
             <h3 class="text-2xl font-bold mb-4 text-gray-800">Section Help</h3>
