--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
         </div>
 
         <p class="text-xs uppercase tracking-widest text-stone-700 font-light">
-          &copy; 2025 AJ's Appliance Repair, LLC. All rights reserved.
+          &copy; 2025 AJ's Appliance Repair, LLC. All rights reserved. <a href="admin.html" class="ml-2 text-stone-800 hover:text-stone-600 transition" aria-label="Admin Panel">●</a>
         </p>
       </div>
     </footer>
