--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
               class="text-stone-600 hover:text-brand font-light transition duration-200 text-sm uppercase tracking-wide"
               id="nav-serviceArea"
             ></a>
+            <a
+              href="admin.html"
+              class="text-stone-400 hover:text-stone-800 font-light transition duration-200 text-sm uppercase tracking-wide"
+              aria-label="Admin"
+            ><i class="fa-solid fa-lock"></i></a>
             <button
               onclick="openContactModal()"
               class="bg-brand text-white px-5 py-2.5 font-medium hover:bg-brandDark transition transform hover:-translate-y-0.5 hover:shadow-lg duration-200 flex items-center gap-2 text-sm uppercase tracking-wide rounded-lg"
@@ -317,6 +322,12 @@
             class="block px-4 py-3 text-base font-light text-stone-700 hover:text-brand hover:bg-stone-50 transition rounded-lg"
             id="mobile-nav-serviceArea"
           ></a>
+          <a
+            href="admin.html"
+            class="block px-4 py-3 text-base font-light text-stone-400 hover:text-stone-800 hover:bg-stone-50 transition rounded-lg"
+          >
+            <i class="fa-solid fa-lock mr-2"></i> Admin Panel
+          </a>
           <div class="flex flex-col gap-2 mt-4 pt-4 border-t border-stone-200">
             <button
               onclick="openContactModal()"
@@ -927,7 +938,7 @@
         </div>
 
         <p class="text-xs uppercase tracking-widest text-stone-700 font-light">
-          &copy; 2025 AJ's Appliance Repair, LLC. All rights reserved. <a href="admin.html" class="ml-2 text-stone-800 hover:text-stone-600 transition" aria-label="Admin Panel">●</a>
+          &copy; 2025 AJ's Appliance Repair, LLC. All rights reserved.
         </p>
       </div>
     </footer>
